[gd_scene load_steps=9 format=3 uid="uid://bmvplitwo1xgc"]

[ext_resource type="Script" uid="uid://dmen8hq1nnxs3" path="res://Scripts/main_menu.gd" id="1_bumi1"]
[ext_resource type="Texture2D" uid="uid://bl8r1v10ok3sv" path="res://Resources/BGs/IMG_4822.png" id="2_17uig"]
[ext_resource type="Texture2D" uid="uid://0vq6dm5scg0w" path="res://Resources/BGs/IMG_5239.png" id="3_6itu3"]
[ext_resource type="Script" uid="uid://ccocmh3nyq4pb" path="res://Scripts/bgscrollscript.gd" id="4_17uig"]
[ext_resource type="FontFile" uid="uid://b1s1rbc2pq2bd" path="res://Resources/Fonts/Berry Rotunda.ttf" id="4_n4fnu"]
[ext_resource type="Texture2D" uid="uid://b6xdjhwggsd7a" path="res://Resources/Sprites/UI_TravelBook_Spritesheet01a.png" id="5_6itu3"]
[ext_resource type="Texture2D" uid="uid://dqaa4end3as5n" path="res://Resources/Sprites/UI_TravelBook_Frame01a.png" id="7_6itu3"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_6itu3"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 3.0
offset_top = 10.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_bumi1")

[node name="BG_12" type="Sprite2D" parent="."]
visible = false
position = Vector2(965, 720)
scale = Vector2(15, 15)
texture = ExtResource("2_17uig")
hframes = 4
vframes = 3

[node name="BG_5" type="Sprite2D" parent="."]
position = Vector2(959, 120)
scale = Vector2(15, 15)
texture = ExtResource("3_6itu3")
hframes = 5
script = ExtResource("4_17uig")

[node name="MainMenuContainer" type="HBoxContainer" parent="."]
layout_mode = 0
offset_right = 1919.0
offset_bottom = 1079.0
alignment = 1

[node name="MainMenuVBoxContainer" type="VBoxContainer" parent="MainMenuContainer"]
custom_minimum_size = Vector2(500, 400)
layout_mode = 2

[node name="MarginContainer2" type="MarginContainer" parent="MainMenuContainer/MainMenuVBoxContainer"]
custom_minimum_size = Vector2(50, 200)
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="MainMenuContainer/MainMenuVBoxContainer"]
custom_minimum_size = Vector2(1200, 220)
layout_mode = 2
texture = ExtResource("5_6itu3")

[node name="GameTitle" type="Label" parent="MainMenuContainer/MainMenuVBoxContainer/TextureRect"]
self_modulate = Color(0.76544, 0.345707, 0.211681, 1)
layout_mode = 2
offset_left = 59.0
offset_top = 74.0
offset_right = 1142.0
offset_bottom = 189.0
theme_override_fonts/font = ExtResource("4_n4fnu")
theme_override_font_sizes/font_size = 100
text = "The GuildMaster"
horizontal_alignment = 1
vertical_alignment = 2

[node name="MarginContainer" type="MarginContainer" parent="MainMenuContainer/MainMenuVBoxContainer"]
custom_minimum_size = Vector2(50, 150)
layout_mode = 2

[node name="PlayButtonContainer" type="HBoxContainer" parent="MainMenuContainer/MainMenuVBoxContainer"]
layout_mode = 2
alignment = 1

[node name="InputFieldContainer" type="HBoxContainer" parent="MainMenuContainer/MainMenuVBoxContainer/PlayButtonContainer"]
visible = false
custom_minimum_size = Vector2(300, 80)
layout_mode = 2
alignment = 1

[node name="TextureRect" type="TextureRect" parent="MainMenuContainer/MainMenuVBoxContainer/PlayButtonContainer/InputFieldContainer"]
custom_minimum_size = Vector2(300, 80)
layout_mode = 2
texture = ExtResource("7_6itu3")

[node name="LineEdit" type="LineEdit" parent="MainMenuContainer/MainMenuVBoxContainer/PlayButtonContainer/InputFieldContainer/TextureRect"]
self_modulate = Color(0.57485, 0.244301, 0.135397, 1)
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
offset_left = 10.0
offset_top = 9.0
offset_right = 291.0
offset_bottom = 69.0
theme_override_fonts/font = ExtResource("4_n4fnu")
theme_override_font_sizes/font_size = 24
theme_override_styles/normal = SubResource("StyleBoxEmpty_6itu3")
placeholder_text = "Guild Name"
alignment = 1
max_length = 33

[node name="PlayGameButton" type="TextureButton" parent="MainMenuContainer/MainMenuVBoxContainer/PlayButtonContainer"]
custom_minimum_size = Vector2(300, 80)
layout_mode = 2
texture_normal = ExtResource("7_6itu3")
stretch_mode = 0

[node name="Label" type="Label" parent="MainMenuContainer/MainMenuVBoxContainer/PlayButtonContainer/PlayGameButton"]
self_modulate = Color(0.580392, 0.247059, 0.137255, 1)
layout_mode = 0
offset_top = 8.0
offset_right = 295.0
offset_bottom = 83.0
theme_override_fonts/font = ExtResource("4_n4fnu")
theme_override_font_sizes/font_size = 35
text = "Play Game"
horizontal_alignment = 1
vertical_alignment = 1

[node name="OptionsContainer" type="HBoxContainer" parent="."]
visible = false
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="CreditsContainer" type="HBoxContainer" parent="."]
visible = false
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[connection signal="text_submitted" from="MainMenuContainer/MainMenuVBoxContainer/PlayButtonContainer/InputFieldContainer/TextureRect/LineEdit" to="." method="_on_line_edit_text_submitted"]
[connection signal="mouse_entered" from="MainMenuContainer/MainMenuVBoxContainer/PlayButtonContainer/PlayGameButton" to="." method="_on_play_game_button_mouse_entered"]
[connection signal="mouse_exited" from="MainMenuContainer/MainMenuVBoxContainer/PlayButtonContainer/PlayGameButton" to="." method="_on_play_game_button_mouse_exited"]
[connection signal="pressed" from="MainMenuContainer/MainMenuVBoxContainer/PlayButtonContainer/PlayGameButton" to="." method="_on_play_game_button_pressed"]
